# hyper-hawk

./: .gitignore  .taskcluster.yml  Cargo.toml  README.md
src/: authscheme.rs  lib.rs  serverauth.rs
tests/: clientserver.rs  interoperability.rs
